<resources>
    <string name="app_name">S.M.A.R.T.</string>
    <string name="title_home">Home</string>
    <string name="title_diagnose">Diagnose</string>
    <string name="button_diagnose">start diagnose</string>
    <string name="temperature_unit">XX</string>

    <string name="reset_button">reset</string>
    <string name="start_button">start</string>
    <string name="pause_button">pause</string>
    <string name="camera_button">camera</string>
    <string name="analysis_button">save</string>

    <string name="photo_des">chip photo</string>
    <string name="hint_DiagRes">diagnose result...</string>
    <string name="button_save">save</string>
    <string name="empty_not_saved">could not be saved：diagnose result id empty!</string>

    <string name="loading_diagres">loading diagnose result...</string>
    <string name="cd_diagres_list">diagnose result list</string>
    <string name="cd_diagres_name">diagnose result title</string>
    <string name="creat_at">Created at: %s</string>

    <string name="title_hint">Title</string>
    <string name="description_hint">edit the description of the diagnose result</string>
    <string name="autofill_des">This is the diagnose result.</string>
    <string name="addtitle">Diagnose title</string>
    <string name="textBtn">Confirm</string>
    <string name="confirmBtn">confirm</string>
    <string name="empty_task_message">The title is empty!</string>
</resources>
