<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<data>-->
        <!--<variable name="diagres"-->
            <!--type="com.diagnose.diagnose.db.entity.DiagResEntity"/>-->
    <!--</data>-->

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/item_horizontal_margin"
            android:layout_marginEnd="@dimen/item_horizontal_margin">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/small_padding"
                android:hint="@string/title_hint"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />


            <EditText
                android:id="@+id/desp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:minLines="3"
                android:hint="@string/description_hint"
                android:layout_marginTop="@dimen/small_padding"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <ImageView
                android:id="@+id/photo_src"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/desp"
                android:layout_marginTop="@dimen/small_padding"
                android:adjustViewBounds="true"
                android:contentDescription="@string/photo_des"
                android:maxHeight="300dp" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart_res"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_below="@id/photo_src"
                android:layout_marginTop="@dimen/small_padding" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart_tmp"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_below="@id/chart_res"
                android:layout_marginTop="@dimen/small_padding" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/confirmBtn"
                android:layout_marginTop="@dimen/small_padding"
                android:layout_below="@id/chart_tmp"
                android:text="@string/confirmBtn"/>

        </RelativeLayout>

    </ScrollView>
</layout>
